# fotran-tooling

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fpm.toml
debugging/: README.md  mdb.md
formatting/: README.md
src/: Makefile  main.f90  mesh_generator.f90  poisson.f  poisson.f90
src/mesh_generator/: main.f90  mesh_generator.f90
src/poisson/: main.f90
testing/: README.md
testing/garden/: README.md  main.f90  test_mesh_generator.f90
testing/test-drive/: CMakeLists.txt  README.md  main.f90  test_mesh_generator.f90
testing/test-drive/tests/: test_mesh_generator.f90
testing/tests/test-drive/: CMakeLists.txt  build.sh  main.f90
testing/tests/test-drive/tests/: test_calc_pi.f90  test_mesh_generator.f90
